🏚👡 Checkpoint ./routes/api.js:10221761/1 ./views/partials/claim-edit.ejs:10221761/30

--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -109,6 +109,7 @@ Goals for this page: POST changes to appropriate places in db upon submission
 
 <script type=text/javascript>
   //if comments, add comment
+  //then update claim
   function update(ele, claim){
     var changeofstatus
     if (ele===document.getElementById("status").value){//if open->open || if close->close
