--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -5,7 +5,7 @@
 <h1>
   Claims
 </h1>
-Goals for this page: create claims, Re-open a closed claim ✓, close a claim if theres a resolution attached ✓, edit and resolve claims, filter and sort claims based on existing claims ✓ 
+Goals for this page: create claims, Re-open a closed claim ✓, close a claim if theres a resolution attached ✓, edit and resolve claims  ✓, filter and sort claims based on existing claims ✓ 
 <%- include("partials/claim-edit") %>
 
 <div id="addFilter">
