--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -6,7 +6,7 @@
 <h2>
   Edit Claim
 </h2>
-Goals for this page: POST changes to appropriate places in db upon submission 
+Goals for this page: POST changes to appropriate places in db upon submission  ✓
 
 
 <button  onclick="modal()">Create New Customer</button>
@@ -46,7 +46,7 @@ Goals for this page: POST changes to appropriate places in db upon submission
             <% if (locals.employees) { %> 
               <option value=<%=result.employeeid%> disabled selected hidden><%=result.employee%> </option> <!--  keeping the selected employee visible in dropdown box -->
               <% employees.forEach(employee=>{ %>
-              <option value='<%=employee.id%>'><%=employee.firstname %> <%=employee.lastname%></option>
+              <option value='<%=employee.employeeid%>'><%=employee.firstname %> <%=employee.lastname%></option>
                <% } )%>
             <% } %>
           </select>
@@ -134,11 +134,9 @@ Goals for this page: POST changes to appropriate places in db upon submission
           }),
               method: 'PUT'
           }).then(resp=>{
-            
           }, err=>{
             console.log(err);
           })
-        location = location //refresh
   }
 </script>
 
