--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -60,7 +60,7 @@
             <% if (result.resolution!='unresolved' & result.status==='Open' ) {%> <!--  add Close dropdown option if condition   -->
             <li><a href="#" onclick="closeClaim('<%=result.claimid%>','<%=claims[0].product%>')">Close</a></li>
             <%}%>
-            <li><a href='/edit/<%=result.claimid%>'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
+            <li><a href='/edit/<%=result.claimid%>/products'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
           </ul>
         </div>
       </td>
