--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -8,9 +8,6 @@
 </h2>
 Goals for this page: POST changes to appropriate places in db upon submission  âœ“
 
-
-<button  onclick="modal()">Create New Customer</button>
-
       <form id="updateform" onsubmit="update('<%=result.status%>','<%=result.claimid%>');">  
         <span><b>Customer: </b><%=result.customer%></span>
         <span><b>Product: </b><%=result.product%> <b>Product Id: </b><%=result.productid%></span>
@@ -106,6 +103,9 @@ Goals for this page: POST changes to appropriate places in db upon submission  â
         </div>
         <input type="submit">
       </form>
+<%if (locals.returnpg){%>
+<button><a href="/<%=returnpg%>">Return</a></button>
+<%}%>
 
 <script type=text/javascript>
   //if comments, add comment
