--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,4 +6,6 @@
 <p>
   DBMS Final Project
 </p>
+Goals for this page: create claims,create purchases - possibly create a purchases tab
+
 <%- include("partials/footer") %>
