--- a/views/products.ejs
+++ b/views/products.ejs
@@ -7,7 +7,7 @@
   Products
 </h1>
 <p>
-  Goals for this page: create new product, view product details ✓, redirect to claims for selected product ✓ 
+  Goals for this page: view product details ✓, redirect to claims for selected product ✓ 
 </p>
   
   <div class="dropdown"> <!-- dropdown is a bootstrap class p sure, so is dropdown menu-->
