⭐️⏳ Checkpoint ./views/employees.ejs:10221761/2984 ./views/customers.ejs:10221761/126 ./routes/api.js:10221761/147

--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -50,15 +50,15 @@
     <span class="close">&times;</span><!-- close button -->
     <div class="d-flex justify-content-center flex-column">
       <form id="updateform">  
-        <span><b>First Name: </b><input value="" id="firstname" type="text" > </span>
-        <span><b>Last Name: </b><input value="" id="lastname" type="text" > </span>
-        <span><b>Email: </b><input value="" id="email"  type="text" > </span>
-        <span><b>Phone Number: </b><input value="" id="phone" type="text" > </span>
-        <span><b>Street Address: </b><input value="" id="address1" type="text" > </span>
-        <span><b>Street Address 2: </b><input value="" id="address2" type="text" > </span>
-        <span><b>City : </b><input value="" id="city"  type="text" > </span>
-        <span><b>State(Abr): </b><input value="" id="state" type="text" > </span>
-        <span><b>Zip: </b><input value="" id="zip"  type="text" > </span>
+        <div><b>First Name: </b><input value="" id="firstname" type="text" > </div>
+        <div><b>Last Name: </b><input value="" id="lastname" type="text" > </div>
+        <div><b>Email: </b><input value="" id="email"  type="text" > </div>
+        <div><b>Phone Number: </b><input value="" id="phone" type="text" > </div>
+        <div><b>Street Address: </b><input value="" id="address1" type="text" > </div>
+        <div><b>Street Address 2: </b><input value="" id="address2" type="text" > </div>
+        <div><b>City : </b><input value="" id="city"  type="text" > </div>
+        <div><b>State(Abr): </b><input value="" id="state" type="text" > </div>
+        <div><b>Zip: </b><input value="" id="zip"  type="text" > </div>
         <button onclick="update();">Submit New Customer</button>
       </form>
     </div>
