🐂🌉 Checkpoint ./views/employees.ejs:10221761/1 ./views/index.ejs:10221761/5 ./views/partials/header.ejs:10221761/95 ./routes/views.js:10221761/647 ./views/purchases.ejs:10221761/12734

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
- <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
+  <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
     <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-balham.css">
 </head>
@@ -19,4 +19,5 @@
   <button><a href="/employees">Employees</a></button>
   <button><a href="/customers">Customers</a></button>
   <button><a href="/products">Products</a></button>
+  <button><a href="/purchases">Purchases</a></button>
 </nav>
