--- a/views/purchases.ejs
+++ b/views/purchases.ejs
@@ -6,6 +6,7 @@
 <% if (locals.customers){%>
 <h1>Purchases</h1>
 
+<%}}}%>
 Goals for this page: create purchases, create claims based on purchases, view purchases, sort & filter purchases
 
 <div id="addFilter">
@@ -21,35 +22,11 @@ Goals for this page: create purchases, create claims based on purchases, view pu
       <input type="checkbox" id="menu-toggle"/>
       <ul id="menu">
         <%var array=[]%>
-        <% claims.forEach(claim=>{ %>
-        <%if (array.includes(claim.customer)){%>
+        <% customers.forEach(customer=>{ %>
+        <%if (array.includes(customer.lastname)){%>
         <%}else{%>
-        <%array=array + claim.customer%>
-        <li><a href="#" onclick="addFilterCustomer(this)"><%=claim.customer%></a></li>
-        <%}})%>
-      </ul>
-    </li>
-    <li><label for="menu2-toggle">Employee</label>
-      <input type="checkbox" id="menu2-toggle"/>
-      <ul id="menu2">
-        <%var array=[]%>
-        <% claims.forEach(claim=>{ %>
-        <%if (array.includes(claim.employee)){%>
-        <%}else{%>
-        <%array=array + claim.employee%>
-        <li><a href="#" onclick="addFilterEmployee(this)"><%=claim.employee%></a></li>
-        <%}})%>
-      </ul>
-    </li>
-    <li><label for="menu3-toggle">Products</label>
-      <input type="checkbox" id="menu3-toggle"/>
-      <ul id="menu3">
-        <%var array=[]%>
-        <% claims.forEach(claim=>{ %>
-        <%if (array.includes(claim.product)){%>
-        <%}else{%>
-        <%array=array + claim.product%>
-        <li><a href="#" onclick="addFilterProduct(this)"><%=claim.product%></a></li>
+        <%array=array + customer.lastname%>
+        <li><a href="#" onclick="addFilterCustomer(this)"><%=customer.firstname%> <%=customer.lastname%></a></li>
         <%}})%>
       </ul>
     </li>
@@ -75,49 +52,23 @@ Goals for this page: create purchases, create claims based on purchases, view pu
   <thead>
     <tr>
       <th></th>
+      <th>Order</th>
       <th>Customer</th>
-      <th>Product</th>
-      <th>Issue</th>
-      <th>Description</th>
-      <th>Technician</th>
-      <th>Open Date</th>
-      <th>Status</th>
-      <th>Resolution</th>
+      <th>Total Price</th>
+      <th>Date</th>
     </tr>
   </thead>
-  <% claims.forEach(result=>{ %>
-  <% var dateOpened = new Date(result.dateopened) %>
+  <% purchase.forEach(result=>{ %>
+  <% var dateOpened = new Date(result.date) %>
   <% var dateOpened = dateOpened.getDate() + "/" +  (dateOpened.getMonth()+1) + "/" + dateOpened.getFullYear() %>
 
   <tbody>
     <tr>
-      <td>
-        <div class="dropdown">
-          <button class="dropdown-toggle" type="button" data-toggle="dropdown">Edit
-          <span class="caret"></span></button>
-          <ul class="dropdown-menu">
-            <% if (result.resolution==='unresolved') { %> <!--  add Resolve dropdown option if condition   -->
-            <li><a href="#" onclick="resolveModal('<%=result.claimid%>')">Resolve</a></li>
-            <%}%>
-            <% if (result.status==='Closed') { %> <!--  add Re-open dropdown option if condition   -->
-            <li><a id="myLink" href="#" onclick="openClaim('<%=result.claimid%>','<%=claims[0].product%>')">Re-open</a></li>
-            <%}%>
-            <% if (result.resolution!='unresolved' & result.status==='Open' ) {%> <!--  add Close dropdown option if condition   -->
-            <li><a href="#" onclick="closeClaim('<%=result.claimid%>','<%=claims[0].product%>')">Close</a></li>
-            <%}%>
-            <li><a href='/edit/<%=result.claimid%>/claims'>Edit Claim</a></li>  <!--  add Edit dropdown option  -->
-          </ul>
-        </div>
-      </td>
-      <td><%=result.customer%></td>
-      <td><%=result.product%></td>
-      <td><%=result.issue%></td>
-      <td><%=result.description%></td>
-      <td><%=result.employee%></td>
-      <td><%= dateOpened %></td>
-      <td><%=result.status%></td>
-      <td><%=result.resolution%></td> 
-    </tr> 
+      <td><%=result.purchaseid%></td>
+      <td><%=result.customerid%></td>
+      <td><%=result.totalcost%></td>
+      <td><%=result.date%></td>
+     </tr> 
   </tbody>
   <%})%>
 </table>
@@ -148,7 +99,9 @@ Goals for this page: create purchases, create claims based on purchases, view pu
     </div>
   </div>
 </div>
+<%}else{%>
 <%}%>
+<%}else{%>
 <%}%>
 <%}else{%>
 <h1>
