🐂🌑 Checkpoint ./views/purchases.ejs:10221761/8769 ./views/claims.ejs:10221761/68 ./views/partials/claim-edit.ejs:10221761/665

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -87,7 +87,7 @@ Goals for this page: Re-open a closed claim ✓, close a claim if theres a resol
   </thead>
   <% claims.forEach(result=>{ %>
   <% var dateOpened = new Date(result.dateopened) %>
-  <% var dateOpened = dateOpened.getDate() + "/" +  (dateOpened.getMonth()+1) + "/" + dateOpened.getFullYear() %>
+  <% var dateOpened = (dateOpened.getMonth()+1) + "/" + dateOpened.getDate() + "/" +  dateOpened.getFullYear() %>
 
   <tbody>
     <tr>
