👓😹 Checkpoint ./views/purchases.ejs:10221761/46 ./views/partials/header.ejs:10221761/30 ./routes/views.js:10221761/857 ./views/orders.ejs:10221761/8192

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
   
 <nav>  
   <button><a href="/">Admin Home</a></button>
-  <button><a href="/purchases">Purchases</a></button>
+  <button><a href="/orders">Orders</a></button>
   <button><a href="/claims">Claims</a></button>
   <button><a href="/employees">Employees</a></button>
   <button><a href="/customers">Customers</a></button>
