🔨🏟 Checkpoint ./routes/api.js:10221761/429 ./README.md:10221761/144 ./routes/views.js:10221761/352 ./views/orders.ejs:10221761/53 ./views/partials/vieworder.ejs:10221761/71

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -25,7 +25,7 @@ Goals for this page: create purchases, create claims based on purchases, view pu
 
   <tbody>
     <tr>
-      <td><button><a href="/productpurchases/<%=result.purchaseid%>">View Order</a></button></td>
+      <td><button><a href="/purchases/<%=result.purchaseid%>">View Order</a></button></td>
       <td><%=result.purchaseid%></td>
       <td><%=customers[result.customerid-1].firstname%> <%=customers[result.customerid-1].lastname%></td>
       <td><%=result.totalcost%></td>
