--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -1,44 +1,45 @@
 <% if (locals.productPurchases){%>
 <%- include("header") %>
 
-<% productPurchases.forEach(result=>{ %>
 <!-- purchase
 customers
 productPurchases
 products
 purchaseid -->
 
-
-
-  <% purchase.forEach(result=>{ %>
-  <% var datePurchase = new Date(result.date) %>
+  <% var datePurchase = new Date(purchase[purchaseid].date) %>
   <% var datePurchase = (datePurchase.getMonth()+1) + "/" + datePurchase.getDate() + "/" +  datePurchase.getFullYear() %>
-      <%=result.purchaseid%>
-      <%=customers[result.customerid-1].firstname%> <%=customers[result.customerid-1].lastname%>
-      <%=result.totalcost%>
-      <%=datePurchase%>
+<div>
+  <h3>
+    <b>Customer: </b><%=customers[purchase[purchaseid].customerid-1].firstname%> <%=customers[purchase[purchaseid-1].customerid-1].lastname%>
+  </h3>
+  <h5>
+    <b>Total Cost: </b><%=purchase[purchaseid-1].totalcost%>
+    <b>Date: </b><%=datePurchase%> 
+  </h5>
+</div>      
 
-<table id="purchasetable" class="table">
+<table id="table" class="table table-hover">
   <thead>
     <tr>
       <th></th>
-      <th>Order Number</th>
-      <th>Customer</th>
-      <th>Total Price</th>
-      <th>Date</th>
+      <th>Product</th>
+      <th>Product ID</th>
+      <th>Unit Cost</th>
     </tr>
   </thead>
-
-
   <tbody>
+  <% productPurchases.forEach(result=>{ %>
     <tr>
-      <td><button><a href="/purchases/<%=result.purchaseid%>">View Order</a></button></td>
-
+      <td><button><a href="#">Create Claim</a></button></td>
+      <td><%=products[result.productid -1].name%></td>
+      <td><%=result.productid%></td>
+      <td><%=products[result.productid -1].unitcost%></td>
      </tr> 
-  </tbody>
   <%})%>
+  </tbody>
 </table>
-<%}%>
+
 
 <button><a href="/orders">Return</a></button>
 
